--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^2.6.1",
     "email-templates": "^5.0.2",
     "express": "^4.16.4",
+    "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.0",
     "multer": "^1.4.1",
